--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+# check these on https://fabricmc.net/develop
+minecraft_version=1.21.4-rc3
+yarn_mappings=1.21.4-rc3+build.3
+loader_version=0.16.9
+
 # Mod Properties
-mod_version=4.0.0-1.17.x
-maven_group=dev.jacksibley.slimeorigin
+mod_version=1.0.0
+maven_group=dev.angelcube
 archives_base_name=slimeorigin
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-origins_version=v1.0.0
-pehkui_version=2.2.1
-cardinal_version=3.0.0-nightly.1.17-pre1
-
-minecraft_version=1.17
-yarn_mappings=1.17+build.11
-loader_version=0.11.6
-
-#Fabric api
-fabric_version=0.35.1+1.17
-
-
+fabric_version=0.110.2+1.21.4
