--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 minecraft_version=1.21.4-rc3
 yarn_mappings=1.21.4-rc3+build.3
 loader_version=0.16.9
+apoli_version=a472c8e327fecf4d9647cfad2a698608a6191a2c
 
 # Mod Properties
 mod_version=1.0.0
