--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     // To change the versions see the gradle.properties file
 
-    modImplementation "com.github.apace100:apoli:{apoli_version}"
+    modImplementation "com.github.apace100:apoli:${project.apoli_version}"
 	
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
