--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.4-rc3
-yarn_mappings=1.21.4-rc3+build.3
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
 loader_version=0.16.9
-apoli_version=a472c8e327fecf4d9647cfad2a698608a6191a2c
+apoli_version=2.12.0-alpha.14+mc.1.21.x
 
 # Mod Properties
 mod_version=1.0.0
