--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.8-SNAPSHOT'
+	id 'fabric-loom' version '1.9-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -51,6 +51,11 @@ repositories {
 		url "https://maven.terraformersmc.com/"
 	}
 
+	// And this 
+	maven {
+		url "https://masa.dy.fi/maven"
+	}
+
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -74,8 +79,8 @@ dependencies {
 
     // To change the versions see the gradle.properties file
 
-    modImplementation "io.github.apace100:apoli:${apoli_version}"
-	
+	modImplementation "io.github.apace100:origins-fabric:${origins_version}"
+
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
