--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ org.gradle.parallel=true
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.9
-apoli_version=2.12.0-alpha.14+mc.1.21.x
+origins_version=1.13.0-alpha.10+mc.1.21.x
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=dev.angelcube
+mod_version=0.0.1
+maven_group=dev.angelcube.slimeorigin
 archives_base_name=slimeorigin
 
 # Dependencies
-fabric_version=0.103.0+1.21.1
+fabric_version=0.110.0+1.21.1
