--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.9
 origins_version=1.13.0-alpha.10+mc.1.21.x
+pehkui_version=3.8.3
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1.0-snapshot+mc.1.21.1
 maven_group=dev.angelcube.slimeorigin
 archives_base_name=slimeorigin
 
