--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,13 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.9
+loader_version=0.16.10
 
 # Mod Properties
-mod_version=0.1.0-alpha+mc.1.21.1
+mod_version=0.1.0-alpha
 maven_group=dev.angelcube.slimeorigin
 archives_base_name=slimeorigin
 
 # Dependencies
-origins_version=1.13.0-alpha.10+mc.1.21.x
-fabric_version=0.110.0+1.21.1
+origins_version=1.13.0-alpha.12+mc.1.21.1
+fabric_version=0.115.0+1.21.1
