fix: maven_group name
whoops

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_version=0.1.0-alpha
-maven_group=dev.angelcube.slimeorigin
+maven_group=dev.angelcube
 archives_base_name=slimeorigin
 
 # Dependencies
